# daily-bot

./: .env.example  .gitignore  README.md  pyproject.toml  seen.json
.claude/: CLAUDE.md
.github/workflows/: news-digest.yml
config/: feeds.yml  profile.md
docs/: SPEC.md
prompts/: deepen.md  triage.md
src/jobs/: news.py
src/lib/: claude.py  config.py  fulltext.py  rss.py  seen.py  slack.py
tests/: test_claude.py  test_config.py  test_fulltext.py  test_news_job.py  test_rss.py  test_seen.py  test_slack.py
