[project]
name = "morning-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40,<1.0",
  "feedparser>=6.0,<7.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "pyyaml>=6.0,<7.0",
  "trafilatura>=1.8,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
